--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
