--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "leaflet": "^1.9.4",
     "ngx-bootstrap": "^11.0.2",
     "ngx-owl-carousel-o": "^16.0.0",
+    "ngx-slick-carousel": "^17.0.0",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.4",
