--- a/angular.json
+++ b/angular.json
@@ -79,7 +79,13 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "milayacapital:build:production"
+              "browserTarget": "milayacapital:build:production",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "browserTarget": "milayacapital:build:development"
